test/testzillians-compiler/ThorScriptCompilerStaticTest/data/error/1_type/function/MISSING_RETURN_VALUE.t
@static_test { expect_message={ level="LEVEL_ERROR", id="MISSING_RETURN_VALUE", parameter={ TYPE="uint32" } } }
function f():uint32
{
}
